# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  main.py  parser.py
gendiff/formatters/: __init__.py  jsn.py  plain.py  stylish.py
gendiff/scripts/: args.py  diff_builder.py  main.py
tests/: test_gendiff_flat_json.py  test_gendiff_flat_yaml.py  test_gendiff_json_formatter.py  test_gendiff_nested.py  test_gendiff_plain.py  utils.py
tests/test_data/: expected_json.txt  file1.yml  nested_file1.yml  nested_file2.yml
