[project]
name = "hexlet-code"
version = "0.1.0"
description = "Diff project for Hexlet"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "argparse>=1.4.0",
    "pyyaml>=6.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.args:main"
